# Proiect-POO

./: .gitignore  CMakeLists.txt  coverage.Include_Animal.h.html  coverage.Include_Colonie.h.html  coverage.Include_Ecosistem.h.html  coverage.Include_EcosistemArtificial.h.html  coverage.Include_Planta.h.html  coverage.Include_Soi.h.html  coverage.Source_Animal.cpp.html  coverage.Source_AnimalFactory.cpp.html  coverage.Source_Colonie.cpp.html  coverage.Source_Ecosistem.cpp.html  coverage.Source_EcosistemArtificial.cpp.html  coverage.Source_Planta.cpp.html  coverage.Source_PlantaFactory.cpp.html  coverage.Source_Soi.cpp.html  coverage.Source_Tester.cpp.html  coverage.html  coverage.main.cpp.html  main.cpp
.github/workflows/: c-cpp.yml
Date/: animale.txt  animaleAcvatice.txt  animaleTerestre.txt  plante.txt  planteAcvatice.txt  planteTerestre.txt
Include/: Animal.h  AnimalFactory.h  Colonie.h  Ecosistem.h  EcosistemArtificial.h  Planta.h  PlantaFactory.h  Soi.h  Tester.h
Source/: Animal.cpp  AnimalFactory.cpp  Colonie.cpp  Ecosistem.cpp  EcosistemArtificial.cpp  Planta.cpp  PlantaFactory.cpp  Soi.cpp  Tester.cpp
